# image_caption

./: .gitignore  .pylintrc  README.md  pyproject.toml
image_caption/: models.py  models_lstm.py  train.py  train_lstm.py
image_caption/utils/: activation.py  data_utils.py  generator.py  model_utils.py
